# framework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md
assets/shaders/: Standard2D.frag  Standard2D.vert  UniversalPhong.frag  UniversalPhong.sbl  UniversalPhong.vert
configuration/: Config.hpp.in
engine/: CMakeLists.txt
engine/include/engine/common/: Exceptions.hpp
engine/include/engine/editor/: SceneInspector.hpp
engine/include/engine/info/: WindowProperties.hpp
engine/include/engine/internal/: Logging.hpp
engine/include/engine/rendering/: ForwardRenderingSystem.hpp
engine/include/engine/scripts/: IScript.hpp  ScriptExecutionContext.hpp  ScriptExecutionSystem.hpp
engine/source/engine/editor/: SceneInspector.cpp
engine/source/engine/rendering/: ForwardRenderingSystem.cpp
engine/source/engine/scripts/: ScriptExecutionSystem.cpp
engine/source/engine/scripts/cameras/: FirstPersonCameraScript.cpp
example/: CMakeLists.txt
example/CMake/: MacOSXBundleInfo.plist
example/assets/models/Cerberus/: Cerberus.mtl  readme
example/assets/models/TreasureChest/: Author.md
example/configuration/: Config.hpp.in
example/include/: Application.hpp  ExampleApplication.hpp  Resources.hpp
example/resources/: settings-icon.icns
example/source/: Application.cpp  ExampleApplication.cpp  Main.cpp  Resources.cpp
fw/: CMakeLists.txt
fw/assets/shaders/: ArealightLTC.sbl  BasicFullscreenQuad.sbl  DiffuseIrradianceCubemap.sbl  EquirectangularToCubemap.sbl  LTC.sbl  PBR.sbl  PrefilteredEnvMap.sbl  Skybox.sbl  SpecularIBLBrdfLut.sbl  Standard2D.frag  Standard2D.vert  UniversalPhong.sbl
fw/include/fw/: Common.hpp  DebugShapes.hpp  FrameMarker.hpp  GeometryChunk.hpp  HeightmapVisualizationEffect.hpp  OpenGLApplication.hpp  PointQuadtree.hpp  Shaders.hpp  Texture.hpp  TextureUtils.hpp  UniversalPhongEffect.hpp
fw/include/fw/cameras/: FirstPersonCameraController.hpp  ProjectionCamera.hpp
fw/include/fw/common/: Filesystem.hpp  StreamUtils.hpp
fw/include/fw/effects/: Standard2DEffect.hpp
fw/include/fw/inputs/: GenericKeyboardInput.hpp  InputStates.hpp
fw/include/fw/models/: RenderMesh.hpp  StaticModelFactory.hpp
fw/include/fw/rendering/: AreaLight.hpp  Framebuffer.hpp  Light.hpp  Material.hpp  Viewport.hpp
fw/include/fw/rendering/arealights/: ArealightLTC.hpp
fw/include/fw/rendering/preprocessing/: CubemapGeneratorBase.hpp  DiffuseIrradianceCubemapGenerator.hpp  EquirectangularToCubemapConverter.hpp  PrefilteredEnvMapGenerator.hpp  SpecularIBLBrdfLutGenerator.hpp  TextureGeneratorBase.hpp
fw/include/fw/resources/: Cubemap.hpp  DiskFileProvider.hpp  IFileProvider.hpp  TextureManager.hpp  VirtualFilesystem.hpp
fw/source/: BasicEffect.cpp  Common.cpp  DebugShapes.cpp  FrameMarker.cpp  HeightmapGeometry.cpp  HeightmapVisualizationEffect.cpp  Shaders.cpp  Texture.cpp  TextureUtils.cpp  UniversalPhongEffect.cpp
fw/source/cameras/: FirstPersonCameraController.cpp  ProjectionCamera.cpp
fw/source/common/: Filesystem.cpp  StreamUtils.cpp
fw/source/effects/: Standard2DEffect.cpp
fw/source/models/: RenderMesh.cpp  StaticModel.cpp  StaticModelFactory.cpp
fw/source/numerical/: BsplineEquidistantKnotGenerator.cpp  BsplineSurface.cpp  ParametricSurfaceClosestPointNaiveFinder.cpp  ParametricSurfaceIntersection.cpp
fw/source/performance/: PerformanceMonitor.cpp
fw/source/rendering/: Framebuffer.cpp
fw/source/rendering/arealights/: ArealightLTC.cpp
fw/source/rendering/preprocessing/: CubemapGeneratorBase.cpp  DiffuseIrradianceCubemapGenerator.cpp  EquirectangularToCubemapConverter.cpp  PrefilteredEnvMapGenerator.cpp  SpecularIBLBrdfLutGenerator.cpp  TextureGeneratorBase.cpp
fw/source/resources/: Cubemap.cpp  DiskFileProvider.cpp  TextureManager.cpp  VirtualFilesystem.cpp
fw/test/: BsplineBasisEvaluatorTests.cpp  BsplineEquidistantKnotGeneratorTests.cpp  BsplineSurfaceTests.cpp  GeometricIntersectionsTests.cpp  PointQuadtreeTests.cpp
fwui/: CMakeLists.txt
fwui/include/fwui/: ImGuiApplication.hpp  ImGuiBinding.hpp  ImGuiExtensions.hpp  LightEditor.hpp  MaterialEditor.hpp  TextureManagerInspector.hpp  VirtualFilesystemInspector.hpp
fwui/include/fwui/editors/: AreaLightEditor.hpp  RenderMeshEditor.hpp
fwui/include/fwui/widgets/: VirtualFSSearch.hpp
fwui/source/: ImGuiApplication.cpp  ImGuiBinding.cpp  ImGuiExtensions.cpp  LightEditor.cpp  MaterialEditor.cpp  TextureManagerInspector.cpp  VirtualFilesystemInspector.cpp
fwui/source/editors/: AreaLightEditor.cpp  RenderMeshEditor.cpp
fwui/source/widgets/: VirtualFSSearch.cpp
include/: Grid.hpp  ImGuiApplication.hpp  OpenGLApplication.hpp
include/fw/: DebugShapes.hpp  Effect.hpp  Framework.hpp  FreeCamera.hpp  GeometricIntersections.hpp  GeometryChunk.hpp  HeightmapGeometry.hpp  ImGuiExtensions.hpp  Material.hpp  Mesh.hpp  OpenGLApplication.hpp  OrbitingCamera.hpp  PointQuadtree.hpp  Resources.hpp  Shaders.hpp  Texture.hpp  TexturedPhongEffect.hpp  UniversalPhongEffect.hpp  Vertices.hpp
include/fw/rendering/: Light.hpp  (+1 more)
source/: BsplineBasisEvaluator.cpp  Common.cpp  CommonBsplineSurfaces.cpp  DebugShapes.cpp  Effect.cpp  FrameMarker.cpp  Framework.cpp  FreeCamera.cpp  GeometryChunk.cpp  Grid.cpp  HeightmapVisualizationEffect.cpp  ImGuiApplication.cpp  ImGuiBinding.cpp  ImGuiExtensions.cpp  IntersectionCurve.cpp  Material.cpp  OpenGLApplication.cpp  OrbitingCamera.cpp  ParametricSurfaceMeshBuilder.cpp  Resources.cpp  Shaders.cpp  Texture.cpp  TextureUtils.cpp  TexturedPhongEffect.cpp  UniversalPhongEffect.cpp  Vertices.cpp
source/cameras/: FirstPersonCameraController.cpp  ProjectionCamera.cpp
source/editor/: LightEditor.cpp  MaterialEditor.cpp  TextureManagerInspector.cpp
source/effects/: Standard2DEffect.cpp
source/inputs/: GenericKeyboardInput.cpp  GenericMouseInput.cpp
source/models/: StaticModel.cpp  StaticModelFactory.cpp
test/: BsplineBasisEvaluatorTests.cpp  BsplineEquidistantKnotGeneratorTests.cpp  BsplineSurfaceTests.cpp  CommonTest.cpp  GeometricIntersectionsTests.cpp  IBasisEvaluatorMock.hpp  IBsplineKnotGeneratorMock.hpp  LinearCombinationEvaluatorTests.cpp
(+27 files in other folders)
